--- a/Lab5.html
+++ b/Lab5.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link href="https://fonts.googleapis.com/css?family=Kanit&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="Lab5_style.css">
   <title>Lab 5 - CSS Data Table</title>
 </head>
